# QKNormE

./: .gitignore  CLAUDE.md  README.md  main.py  prompt_draft.md  pyproject.toml  report.py  지시사항.txt
experiment/: config.py  data.py  metrics.py  model.py  run_all.py  train.py
raw/: 내 제안.txt
wiki/: index.md  log.md
wiki/concepts/: PV의_기하학적_적합성.md  잔차연결_수정안.md  커널해석과_평균이동.md
wiki/reports/: report-20260410-230530.md  최종결론.md
wiki/sources/: geshkovski2023.md  geshkovski2023_appendix_PIV.md  rigollet2024.md  제안_PIV.md
