[project]
name = "qknormgaussian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.31.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "torch>=2.2.0",
    "datasets>=2.16.0",
    "transformers>=4.37.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
name = "pytorch-cu124"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
