[project]
name = "qknormgaussian"
version = "0.1.0"
description = "Research code and wiki for QK-Norm Transformer residual geometry experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.31.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "torch>=2.8.0",
    "datasets>=2.16.0",
    "transformers>=4.37.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
name = "pytorch-cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
